--- a/setup.cfg
+++ b/setup.cfg
@@ -2,15 +2,15 @@
 name = sdxl-dora-trainer
 version = 1.0.0
 author = SDXL DoRA Trainer Contributors
-author_email = 
+author_email = lechenadece@gmail.com
 description = Production-ready tool for fine-tuning SDXL models using DoRA
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/yourusername/sdxl-dora-trainer
+url = https://github.com/ElouarnLC/sdxl-dora-trainer
 project_urls =
-    Bug Tracker = https://github.com/yourusername/sdxl-dora-trainer/issues
-    Documentation = https://github.com/yourusername/sdxl-dora-trainer/docs
-    Source = https://github.com/yourusername/sdxl-dora-trainer
+    Bug Tracker = https://github.com/ElouarnLC/sdxl-dora-trainer/issues
+    Documentation = https://github.com/ElouarnLC/sdxl-dora-trainer/docs
+    Source = https://github.com/ElouarnLC/sdxl-dora-trainer
 classifiers =
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
