feat: Add DoRA weight support to image generation script
- Add --dora-weights argument to generate_images.py for loading trained DoRA adapters
- Enhance setup_pipeline() function to optionally load DoRA weights via PeftModel
- Add validation for DoRA weights directory and required adapter files
- Update Makefile with new generate-dora target for DoRA-enhanced image generation
- Maintain backward compatibility - script works with base model when no DoRA weights specified
- Add comprehensive error handling and logging for DoRA weight loading process

This allows users to generate images using trained DoRA models from the DSPO training pipeline,
enabling comparison between base model and fine-tuned model outputs.

Usage:
  Base model: make generate
  With DoRA:  make generate-dora
  Custom:     python scripts/generate_images.py --dora-weights /path/to/weights

--- a/diffusion_rlhf/Makefile
+++ b/diffusion_rlhf/Makefile
@@ -1,6 +1,6 @@
 # Makefile for Diffusion RLHF Pipeline
 
-.PHONY: all generate annotate build-pairs train-reward train-dspo sweep clean test
+.PHONY: all generate generate-dora annotate build-pairs train-reward train-dspo sweep clean test
 
 # Default target
 all: generate build-pairs train-reward train-dspo
@@ -8,6 +8,10 @@ all: generate build-pairs train-reward train-dspo
 # Generate images from prompts
 generate:
 	python scripts/generate_images.py --prompts data/prompts.csv --output data/images/
+
+# Generate images with DoRA weights (after training)
+generate-dora:
+	python scripts/generate_images.py --prompts data/prompts.csv --output data/images/ --dora-weights outputs/dspo_model/
 
 # Placeholder for manual annotation step
 annotate:
