--- a/.gitignore
+++ b/.gitignore
@@ -183,6 +183,12 @@ cython_debug/
 # Ruff stuff:
 .ruff_cache/
 
+# Generated images and training data
+data/images/
+diffusion_rlhf/data/images/
+outputs/
+diffusion_rlhf/outputs/
+
 # PyPI configuration file
 .pypirc
 
