fix: make build_pairs.py compatible with both single and dual GPU workflows
- Remove mutually exclusive argument groups to support both --ratings and --images-csv
- Add multihead annotation template creation for expert rating workflow
- Fix Makefile to use consistent generated.csv filename for both GPU modes
- Support both preference pairs building and annotation template creation
- Clean up duplicate function definitions and improve argument handling

--- a/diffusion_rlhf/Makefile
+++ b/diffusion_rlhf/Makefile
@@ -80,7 +80,7 @@ annotate:
 	@echo "  - Fidelity: Technical quality, sharpness, noise, artifacts"
 	@echo "  - Material: Texture realism, surface properties, lighting"
 	python scripts/build_pairs.py \
-		--images-csv $(OUTPUT_DIR)/../generated_dual_gpu.csv \
+		--images-csv data/generated.csv \
 		--output data/annotations/multihead_ratings.csv \
 		--format multihead
 	@echo "✅ Multi-head annotation template created!"
