fix: Fix multihead reward model training issues
- Fix image path resolution in multihead dataset (parent.parent -> parent.parent)
- Fix tensor dimension mismatch in loss computation
- Use .view(-1) instead of .squeeze() for consistent tensor shapes
- Resolves 'No such file or directory' and 'Target size must be same as input size' errors

Changes:
- multihead_dataset.py: Correct image path from data/annotations/data/images to data/images
- reward.py: Fix tensor dimensions in multihead_preference_loss and combined loss

--- a/.gitignore
+++ b/.gitignore
@@ -189,6 +189,11 @@ diffusion_rlhf/data/images/
 outputs/
 diffusion_rlhf/outputs/
 
+# Generated data files and annotations
+diffusion_rlhf/data/generated*.csv
+diffusion_rlhf/data/prompts*.csv
+diffusion_rlhf/data/annotations/
+
 # PyPI configuration file
 .pypirc
 
